Endpoints para probar Git ouath